Fixed intro-img not being fixed to center

--- a/style.css
+++ b/style.css
@@ -6,15 +6,14 @@ body{
     width: 80%;
     margin: auto;
 }
- a {
+a {
      text-decoration: none;
      color: #E7ECEE;
- }
- a:hover{
+}
+a:hover{
      color: black;
- }
-
- ul{
+}
+ul{
     DISPLAY: block;
     list-style-type: disc;
     margin: 20px 0;
@@ -24,10 +23,14 @@ body{
 
 .row{
     display: flex;
-    position: relative;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .col{
-    flex:50%;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
 .header{
     text-align: center;
@@ -47,14 +50,16 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: 5px #113662 solid;
     padding: 20px;
-    margin: 40px 20px 0 20px;
-    width: 125%;
 }
 #intro-img {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+#img {
     border-radius: 50%;
     width: 50%;
     border: 7px #113662 solid;
-    float: right;
 }
 #main-bar{
     list-style-type: none;
@@ -66,6 +71,19 @@ body{
     display: inline;
 }
 #main-bar a{
-    padding: 2.5% 5%;
+    margin: 0%;
+    padding: 20px 5%;
     font-size: 35px;
+}
+
+
+@media screen and (max-width: 1100px){
+    .col{
+        flex: 1;
+    }
+}
+@media screen and (min-width: 650px){
+    .col{
+        flex: 1;
+    }
 }
