--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     color: #113662;
+    background: url(img/background.png);
     background-color: #B1BEC6;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 18px;
@@ -8,7 +9,7 @@ body{
 }
 a {
      text-decoration: none;
-     color: #E7ECEE;
+     color: #1351e0;
 }
 a:hover{
      color: black;
@@ -65,12 +66,15 @@ ul{
     list-style-type: none;
     text-align: center;
     border: 5px #113662 solid;
-    background: #6096BA;
+    background-color: rgba(99, 175, 219, 0.5);
 }
+
 #main-bar li{
     display: inline;
+    opacity: 1 !important;
 }
 #main-bar a{
+    opacity: 1 !important;
     margin: 0%;
     padding: 20px 5%;
     font-size: 35px;
